# covered

./: README.md  covered.cabal  go.sh  main.hs  nginx.sh  run.sh
css/: style.css
images/stack-hscolour/: Dockerfile
sites-enabled/: covered.noteed.com
