name:                covered
version:             0.0.0
Cabal-Version:       >= 1.8
synopsis:            Syntax and Haskell Program Coverage highlighting
description:
  Covered combines hpc-markup and hscolour (which is under the GPL, so the
  resulting program is GPL too; original code in this package is under BSD3).
category:            System
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.be
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/noteed/covered

executable covered
  hs-source-dirs:      bin
  main-is:             covered.hs
  build-depends:       array == 0.4.*,
                       base == 4.*,
                       hpc == 0.6.*,
                       hscolour == 1.20.*
  ghc-options:         -Wall
